tests/snapshots/render/ci-list.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
ci

  npm run dev      Start the Vite development server  ∞ long-running
  npm run test     Run Vitest tests
  npm run build    Build the app with Vite
  npm run deploy   Deploy the Cloudflare Worker  [external]
  npm run release  Bump versions from pending changesets, then push commits to the remote  [external]  ∆ git
