tests/snapshots/render/ci-why-deploy.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
deploy  Deploy the Cloudflare Worker
  command     npm run deploy
  in          .
  project     ci (.)
  source      declared by the project (npm)
  confidence  exact
  risk        external
  runs        wrangler deploy
