tests/snapshots/render/noise-list-all.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
noise

  npm run lint                               Check source code with ESLint
  npm run deploy                             Run tools/deploy.ts
  cargo build --workspace
  cargo test --workspace                     Run Rust tests for the whole workspace
  cargo check --workspace                    Type-check the Rust project for the whole workspace
  cargo clippy --workspace                   Lint Rust source with Clippy for the whole workspace
  cargo fmt --workspace                      Format Rust source
  cargo bench --workspace                    Run Rust benchmarks
  cargo doc --no-deps --workspace            Build the Rust docs
  rake test                                  Run all tests
  composer dev                               Start the Laravel development server  ∞ long-running
  composer test                              Run Laravel tests
  make docs                                  Build the HTML documentation
  make clean                                 Delete _build/*
  make install
  make help
  kubectl apply --dry-run=client -f k8s/     Validate Kubernetes manifests
  kubectl apply -f k8s/                      Apply resources to the cluster  [external]
  kubectl delete -f k8s/                     Delete resources from the cluster  [destructive]
  npm run compile --workspaces --if-present  Compile TypeScript sources in every workspace package

crates/util
  cargo build -p util          Build the crate
  cargo test -p util           Run Rust tests for util
  cargo check -p util          Type-check the Rust project for util
  cargo clippy -p util         Lint Rust source with Clippy for util
  cargo fmt -p util            Format Rust source
  cargo bench -p util          Run Rust benchmarks
  cargo doc --no-deps -p util  Build the Rust docs

examples/demo
  npm run dev  Start the Vite development server  ∞ long-running

mobile
  flutter run              Run the Flutter app  ∞ long-running  ⊙ device
  flutter test             Run Flutter tests
  flutter analyze          Analyze Dart source
  dart format .
  flutter build apk        Build the Android APK
  flutter build appbundle  Build the Android App Bundle
  flutter build ios        Build the iOS app
  flutter pub get          Install Dart dependencies  ↓ download

packages/lib
  npm run build  Build the package with tsup
  npm run test   Run Vitest tests

packages/lib/test/apps/demo
  npm run dev    Start the Vite development server  ∞ long-running
  npm run build  Build the app with Vite

packages/p1
  npm run compile  Compile TypeScript sources
  npm run test     Run Vitest tests

packages/p2
  npm run compile  Compile TypeScript sources
  npm run test     Run Vitest tests

packages/p3
  npm run compile  Compile TypeScript sources
  npm run test     Run Vitest tests

packages/p4
  npm run compile  Compile TypeScript sources
  npm run test     Run Vitest tests

packages/p5
  npm run compile  Compile TypeScript sources
  npm run test     Run Vitest tests
