tests/snapshots/render/noise-why-lint.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
lint  Check source code with ESLint
  command     npm run lint
  in          .
  project     noise (.)
  source      declared by the project (npm)
  confidence  exact
  risk        safe
  runs        eslint .
