tests/snapshots/render/noise-why-test.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
test  Run Rust tests for the whole workspace
  command     cargo test --workspace
  in          .
  project     noise (.)
  source      inferred from cargo conventions
  confidence  high
  risk        safe
