tests/snapshots/render/nx-ci.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
nx

No CI pipelines found (looked for .github/workflows/*.yml and .gitlab-ci.yml).
