tests/snapshots/render/nx-list-all.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
nx

  npm run test
  nx run-many -t build
  nx run-many -t lint             Check source code with ESLint
  nx run-many -t e2e
  nx run-many -t format           Format source code with Prettier
  nx run-many -t release-check
  nx run-many -t maybe-deploy
  nx affected -t build test lint
  nx graph                        Open the Nx project graph

apps/api
  nx run api:serve    Serve the app  ∞ long-running
  nx run api:build    Build with esbuild
  nx run api:test     Run Jest tests
  nx run api:docker   Build the Docker image
  nx run api:ci       Run linting, type checks, and tests
  nx run api:release

apps/web
  npm run test              Run Vitest tests
  npm run typecheck         Check TypeScript types
  nx run web:serve          Serve the app with Vite  ∞ long-running
  nx run web:build          Build with Vite
  nx run web:test           Run Vitest tests
  nx run web:lint           Check source code with ESLint
  nx run web:format         Format source code with Prettier
  nx run web:release-check
  nx run web:maybe-deploy
  nx run web:unknown-thing
  nx run web:e2e            Run end-to-end tests
  nx run web:deploy         Deploy the Cloudflare Worker  [external]
